ADD:se agregan redes sociales

--- a/estilofnc.css
+++ b/estilofnc.css
@@ -1,4 +1,4 @@
-body {  padding-bottom: 70px;  margin-top: 15px;}
+body {  padding-top: 35px;  margin-top: 15px;}
 .media{  margin:0;  padding:40px;}
 .media-body{  padding: 10px;}
 .navbar-default{  background-color: #0060A8; border-color:#337ab7}
